--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
     "build": "ionic-app-scripts build",
     "lint": "ionic-app-scripts lint"
   },
+
+  "config": {    
+    "ionic_copy": "./config/copy.config.js",    
+    "ionic_sass": "./config/sass.config.js"  
+  },
+  
   "dependencies": {
     "@angular/animations": "5.2.11",
     "@angular/common": "5.2.11",
@@ -26,6 +32,7 @@
     "@ionic/storage": "2.1.3",
     "angularfire2": "^5.0.1",
     "firebase": "^5.5.0",
+    "font-awesome": "^4.7.0",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "promise-polyfill": "^8.1.0",
