--- a/package.json
+++ b/package.json
@@ -10,12 +10,10 @@
     "build": "ionic-app-scripts build",
     "lint": "ionic-app-scripts lint"
   },
-
-  "config": {    
-    "ionic_copy": "./config/copy.config.js",    
-    "ionic_sass": "./config/sass.config.js"  
+  "config": {
+    "ionic_copy": "./config/copy.config.js",
+    "ionic_sass": "./config/sass.config.js"
   },
-  
   "dependencies": {
     "@angular/animations": "5.2.11",
     "@angular/common": "5.2.11",
@@ -27,10 +25,19 @@
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
     "@ionic-native/core": "~4.12.0",
+    "@ionic-native/facebook": "^4.17.0",
     "@ionic-native/splash-screen": "~4.12.0",
     "@ionic-native/status-bar": "~4.12.0",
     "@ionic/storage": "2.1.3",
     "angularfire2": "^5.0.1",
+    "cordova-android": "^7.1.1",
+    "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-facebook4": "3.1.0",
+    "cordova-plugin-ionic-keyboard": "^2.1.3",
+    "cordova-plugin-ionic-webview": "^2.2.3",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-whitelist": "^1.3.3",
     "firebase": "^5.5.0",
     "font-awesome": "^4.7.0",
     "ionic-angular": "3.9.2",
@@ -45,5 +52,25 @@
     "@ionic/app-scripts": "^3.2.0",
     "typescript": "~2.6.2"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {
+        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
+      },
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-facebook4": {
+        "APP_ID": "744640992552222",
+        "APP_NAME": "login_nossaLista",
+        "FACEBOOK_ANDROID_SDK_VERSION": "4.37.0"
+      }
+    },
+    "platforms": [
+      "android"
+    ]
+  }
 }
